--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -452,7 +452,7 @@ button {
 
 .scroll-bar::-webkit-scrollbar-thumb {
   border: 4px solid transparent;
-  background-color: var(--white-20);
+  background-color: var(--white-300-75);
   border-radius: 24px;
   background-clip: padding-box;
 }
@@ -616,5 +616,68 @@ h6:not(:where(.h1, .h2, .h3, .h4, .h5)) {
 @media (max-width: 575px) {
   .font-60 {
     font-size: 30px;
+  }
+}
+
+/* ----- SIDEBAR ----- */
+.sidebar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  background-color: var(--black-28);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+.sidebar.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* ----- MODAL ----- */
+.modal {
+  position: fixed;
+  inset: 0;
+  z-index: 999;
+  display: flex;
+  padding: 20px;
+  background: var(--black-28);
+  overflow: auto;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+.modal.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal-dialog {
+  width: 100%;
+  margin: auto;
+  transform: scale(0.8);
+  transition: all 0.3s ease-in-out;
+}
+
+.modal.active .modal-dialog {
+  transform: scale(1);
+}
+
+.modal-close-btn {
+  justify-self: end;
+}
+
+.modal-close-btn-icon {
+  width: 64%;
+}
+
+@media (max-width: 767px) {
+  .modal {
+    padding: 0;
   }
 }
