--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* ----- Hero section ----- */
+/* ----- HERO SECTION ----- */
 .hero-section {
   height: 100vh;
   padding-top: 92px;
@@ -75,7 +75,7 @@
   clip-path: polygon(54% 0, 100% 0, 100% 100%, 0 100%);
 }
 
-/* ----- Featured slier section ----- */
+/* ----- FEATURED SLIDER SECTION ----- */
 .home-featured-slider {
   padding-block: 92px 80px;
 }
@@ -162,7 +162,7 @@
   font-weight: 400;
 }
 
-/* ----- Explore more section ----- */
+/* ----- EXPLORE MORE SECTION ----- */
 .explore-more-section {
   background-color: var(--black);
 }
@@ -207,7 +207,7 @@
   transform: translateX(-50%);
 }
 
-/* ----- Two column section ----- */
+/* ----- TWO COLUMN SECTION ----- */
 .champions-column-section {
   padding-block: 155px 92px;
 }
@@ -273,7 +273,7 @@
   color: var(--black-200);
 }
 
-/* ----- Cta banner section ----- */
+/* ----- CTA BANNER SECTION ----- */
 .home-cta-banner {
   padding-block: 92px 45px;
 }
@@ -302,7 +302,7 @@
   font-style: italic;
 }
 
-/* ----- Shop by brand section ----- */
+/* ----- SHOP BY BRAND SECTION ----- */
 .shop-by-brand {
   padding-block: 45px 70px;
 }
@@ -339,12 +339,12 @@
   height: 100%;
 }
 
-/* ----- Finance column section ----- */
+/* ----- FINANCE COLUMN SECTION ----- */
 .finance-column-section {
   padding-block: 70px 140px;
 }
 
-/* ----- Testimonial section ----- */
+/* ----- TESTIMONIAL SECTION ----- */
 .testimonial-section {
   background: var(--black-300);
   padding-block: 168px 150px;
@@ -425,7 +425,7 @@
   outline: none;
 }
 
-/* ----- Cta blog section ----- */
+/* ----- CTA BLOG SECTION ----- */
 .cta-blog-section {
   height: 575px;
   position: relative;
@@ -459,9 +459,9 @@
 }
 
 /* ========================================
-          productCategory HTML
+          PRODUCTCATEGORY HTML
 ========================================*/
-/* ----- Category hero section ----- */
+/* ----- CATEGORY HERO SECTION ----- */
 .category-hero {
   background-color: var(--black);
   padding-block: 102px 78px;
@@ -502,7 +502,7 @@
   color: var(--black);
 }
 
-/* ----- Product category section ----- */
+/* ----- PRODUCT CATEGORY SECTION ----- */
 .product-category-section {
   padding-block: 66px 110px;
   position: relative;
@@ -785,15 +785,15 @@
   justify-self: center;
 }
 
-/* ----- Explore more section ----- */
+/* ----- EXPLORE MORE SECTION ----- */
 .category-explore-more {
   padding-block: 70px 85px;
 }
 
 /* ========================================
-          ProductOpen HTML
+          PRODUCTOPEN HTML
 ========================================*/
-/* ----- Product Overview section ----- */
+/* ----- PRODUCT OVERVIEW SECTION ----- */
 .product-overview-section {
   padding-bottom: 90px;
   margin-top: 96px;
@@ -957,25 +957,7 @@
   border-color: var(--black);
 }
 
-/* --- START MORE INFO MODAL --- */
-.sidebar {
-  position: fixed;
-  top: 0;
-  right: 0;
-  z-index: 999;
-  width: 100%;
-  height: 100%;
-  background-color: var(--black-28);
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.3s ease-in-out;
-}
-
-.sidebar.active {
-  opacity: 1;
-  visibility: visible;
-}
-
+/* --- START MORE INFO SIDEBAR --- */
 .sidebar-wrapper {
   width: 100%;
   height: 100vh;
@@ -993,17 +975,17 @@
   padding-inline: 80px 26px;
 }
 
-.more-info-modal-close-btn {
+.more-info-sidebar-close-btn {
   justify-self: end;
   transition: all 0.3s ease-in-out;
   margin-bottom: 56px;
 }
 
-.more-info-modal-close-btn:hover {
+.more-info-sidebar-close-btn:hover {
   color: var(--white);
 }
 
-.more-info-modal-close-btn-icon {
+.more-info-sidebar-close-btn-icon {
   width: 55%;
 }
 
@@ -1013,14 +995,14 @@
   font-weight: 200;
 }
 
-.more-info-modal {
+.more-info-sidebar {
   font-style: italic;
   font-family: var(--font-transducer-exp);
   font-weight: 400;
   margin-bottom: 40px;
 }
 
-.more-info-modal span {
+.more-info-sidebar span {
   font-family: var(--font-transducer-black-exp);
 }
 
@@ -1042,10 +1024,10 @@
   margin-bottom: 15px;
 }
 
-.more-info-modal-btn {
+.more-info-sidebar-btn {
   margin-top: 54px;
 }
-/* --- END MORE INFO MODAL --- */
+/* --- END MORE INFO SIDEBAR --- */
 
 .product-overview-price-wrapper {
   display: flex;
@@ -1116,7 +1098,7 @@
   transform: translate(-50%, -50%);
 }
 
-/* ----- Conversion section ----- */
+/* ----- CONVERSION SECTION ----- */
 .conversion-section {
   margin-top: -68px;
   padding-bottom: 50px;
@@ -1136,40 +1118,12 @@
   font-weight: 400;
 }
 
-.modal {
-  position: fixed;
-  inset: 0;
-  z-index: 999;
-  display: flex;
-  padding: 20px;
-  background: var(--black-28);
-  overflow: auto;
-  opacity: 0;
-  visibility: hidden;
-  transform: scale(0.8);
-  transition: all 0.3s ease-in-out;
-}
-
-.modal.active {
-  opacity: 1;
-  visibility: visible;
-  transform: scale(1);
-}
-
+/* ----- START FINANCE MODAL ----- */
 .modal-wrapper {
-  width: 100%;
   max-width: 965px;
-  margin: auto;
-  background-color: var(--white);
   padding: 20px;
-}
-
-.modal-close-btn {
-  justify-self: end;
-}
-
-.modal-close-btn-icon {
-  width: 64%;
+  background-color: var(--white);
+  padding-bottom: 40px;
 }
 
 .finance-modal-content {
@@ -1183,6 +1137,7 @@
 }
 
 .finance-modal-caption {
+  max-width: max-content;
   color: var(--brown);
   display: flex;
   align-items: center;
@@ -1204,6 +1159,16 @@
   text-transform: capitalize;
   color: var(--gray-600);
   margin-bottom: 20px;
+  transition: all 0.3s ease-in-out;
+}
+
+.finance-purchase-btn:hover {
+  background-color: var(--brown);
+  color: var(--white);
+}
+
+.finance-value-wrapper:last-child {
+  border-bottom: 1px solid var(--silver);
 }
 
 .finance-value-wrapper {
@@ -1229,9 +1194,11 @@
 
 .finance-value-input span {
   color: var(--gray-700);
+  text-transform: capitalize;
 }
 
 .finance-num-input {
+  min-width: 100px;
   border: 2px solid var(--darkslategray);
   padding: 10px;
   color: var(--gray);
@@ -1264,39 +1231,213 @@
 }
 
 .finance-range-input {
-  -webkit-appearance: none;
-  appearance: none;
-  background-color: transparent;
   width: 100%;
-  outline: none;
-  accent-color: var(--brown);
-}
-
-.finance-range-input::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 36px;
-  aspect-ratio: 1;
-  background: var(--white);
-  border-radius: 100%;
-  cursor: pointer;
-  margin-top: -17px;
-  border: 1px solid var(--brown);
-  /* box-shadow: -700px 0 0 700px var(--brown); */
-}
-
-.finance-range-input::-webkit-slider-runnable-track {
-  /* width: 100%; */
-  height: 3px;
-  background: var(--gray-700);
+  outline: none;
+  background: linear-gradient(
+    to right,
+    var(--brown) 0%,
+    var(--brown) var(--value),
+    var(--gray-700) var(--value),
+    var(--gray-700) 100%
+  );
   border-radius: 6px;
   cursor: pointer;
 }
 
+.finance-range-input::-webkit-slider-runnable-track {
+  height: 3px;
+}
+
+.finance-range-input::-webkit-slider-thumb {
+  width: 36px;
+  aspect-ratio: 1;
+  -webkit-appearance: none;
+  appearance: none;
+  background: var(--white);
+  border-radius: 100%;
+  margin-top: -17px;
+  border: 1px solid var(--brown);
+}
+/* ----- END FINANCE MODAL ----- */
+
+/* ----- START PART EX  MODAL ----- */
+.part-ex-wrapper {
+  max-width: 556px;
+  background-color: var(--white);
+  padding: 25px 25px 52px;
+}
+
+.part-ex-content {
+  max-width: 432px;
+}
+
+.part-ex-head-content {
+  margin-bottom: 50px;
+}
+
+.part-ex-head-title {
+  font-family: var(--font-transducer);
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+
+.part-ex-head-options {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.part-ex-option {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: var(--black-200);
+  line-height: normal;
+}
+
+.part-ex-option input[type="radio"] {
+  appearance: none;
+  outline: none;
+  width: 16px;
+  aspect-ratio: 1;
+  border: 1px solid var(--black);
+  border-radius: 100%;
+  flex-shrink: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.part-ex-option input[type="radio"]:checked {
+  background-color: var(--primary-100);
+  border-color: transparent;
+  position: relative;
+}
+
+.part-ex-option input[type="radio"]:checked::before {
+  content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="square" stroke-linejoin="round" class="lucide lucide-check-icon lucide-check"><path d="M20 6 9 17l-5-5"/></svg>');
+  width: 80%;
+  height: 80%;
+  color: var(--black);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 0.3s ease-in-out;
+}
+
+.part-ex-contacts {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-bottom: 22px;
+}
+
+.part-ex-input {
+  border-color: var(--white-300);
+  padding-block: 10px;
+}
+
+.part-ex-input::placeholder {
+  color: var(--black);
+}
+
+.contacts-input-wrapper {
+  display: flex;
+  gap: 26px;
+}
+
+.part-ex-contact-caption {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.part-ex-form-btn {
+  min-width: 100%;
+  padding: 26px 14px;
+}
+
+.bike-value-author-content {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.bike-value-input {
+  width: 50%;
+}
+
+.bike-value-year-select {
+  max-width: 124px;
+  border: none;
+  border-bottom: 1px solid var(--white-300);
+  outline: none;
+}
+
+.bike-value-input-content {
+  margin-top: 42px;
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+}
+
+.bike-value-input-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 26px;
+}
+
+.bike-value-file-label {
+  border-bottom: 1px solid var(--white-300);
+  width: 50%;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.bike-value-file-label::after {
+  content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%23cccccc" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-upload-icon lucide-upload"><path d="M12 3v12"/><path d="m17 8-5-5-5 5"/><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/></svg>');
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  top: auto;
+  right: 0;
+}
+
+.bike-value-file-input {
+  display: none;
+}
+
+/* .bike-value-wrapper.active .part-ex-wrapper {
+  max-width: 815px;
+} */
+
+/* .bike-value-wrapper {
+  max-width: 587px;
+} */
+
+.bike-value-outstanding-wrapper {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.part-ex-newsletters-input {
+  max-width: max-content;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 28px;
+}
+
+/* ----- END PART EX  MODAL ----- */
+
 /* ========================================
-          Compare HTML
+          COMPARE HTML
 ========================================*/
-/* ----- Compare section ----- */
+/* ----- COMPARE SECTION ----- */
 .compare-section {
   margin-top: 96px;
   padding-block: 104px 140px;
@@ -1443,7 +1584,7 @@
   margin-block: 24px 8px;
 }
 
-/* ----- Compare explore more section ----- */
+/* ----- COMPARE EXPLORE MORE SECTION ----- */
 .compare-explore-more {
   padding-block: 70px 105px;
 }
