--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -113,6 +113,10 @@ body {
   scroll-behavior: smooth;
 }
 
+.body-hidden{
+  overflow: hidden;
+}
+
 .container {
   width: 100%;
   max-width: 1364px;
