--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -855,7 +855,7 @@
   max-height: 560px;
 }
 
-#product-overview-thumbnail {
+.product-overview-thumbnail {
   width: 60%;
 }
 
@@ -1088,7 +1088,7 @@
   position: relative;
 }
 
-.compare-btn input:checked{
+.compare-btn input:checked {
   background-color: var(--primary-100);
 }
 
@@ -1268,17 +1268,34 @@
 
 /* ----- START PART EX  MODAL ----- */
 .part-ex-wrapper {
-  max-width: 556px;
   background-color: var(--white);
-  padding: 25px 25px 52px;
+  padding: 28px 28px 60px;
 }
 
-.part-ex-content {
+.part-ex-wrapper.contact-active {
+  max-width: 560px;
+}
+
+.part-ex-wrapper.bike-active {
+  max-width: 900px;
+}
+
+.part-ex-bike-value-modal {
+  /* opacity: 0;
+  visibility: hidden; */
+  display: none;
+}
+
+.part-ex-contacts-modal.active,
+.part-ex-bike-value-modal.active {
+  /* opacity: 1;
+  visibility: visible; */
+  display: block;
+}
+
+.part-ex-contacts-modal.active .part-ex-wrapper {
+  width: 100%;
   max-width: 432px;
-}
-
-.part-ex-head-content {
-  margin-bottom: 50px;
 }
 
 .part-ex-head-title {
@@ -1331,6 +1348,11 @@
   transition: all 0.3s ease-in-out;
 }
 
+/* .part-ex-contacts-wrapper {
+  max-width: 432px;
+  padding-inline: 36px;
+} */
+
 .part-ex-contacts {
   display: flex;
   flex-direction: column;
@@ -1362,6 +1384,11 @@
   padding: 26px 14px;
 }
 
+/* .bike-value-wrapper {
+  max-width: 815px;
+  padding-inline: 88px;
+} */
+
 .bike-value-author-content {
   display: flex;
   align-items: center;
@@ -1374,9 +1401,6 @@
 
 .bike-value-year-select {
   max-width: 124px;
-  border: none;
-  border-bottom: 1px solid var(--white-300);
-  outline: none;
 }
 
 .bike-value-input-content {
@@ -1388,7 +1412,6 @@
 
 .bike-value-input-wrapper {
   display: flex;
-  align-items: center;
   gap: 26px;
 }
 
@@ -1397,35 +1420,30 @@
   width: 50%;
   display: flex;
   align-items: center;
-  position: relative;
+  justify-content: space-between;
+  gap: 12px;
 }
 
 .bike-value-file-label::after {
   content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%23cccccc" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-upload-icon lucide-upload"><path d="M12 3v12"/><path d="m17 8-5-5-5 5"/><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/></svg>');
-  width: 16px;
-  height: 16px;
-  position: absolute;
-  top: auto;
-  right: 0;
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
 }
 
 .bike-value-file-input {
   display: none;
 }
 
-/* .bike-value-wrapper.active .part-ex-wrapper {
-  max-width: 815px;
-} */
-
-/* .bike-value-wrapper {
-  max-width: 587px;
-} */
-
 .bike-value-outstanding-wrapper {
-  margin-top: 60px;
+  margin-block: 60px 40px;
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+.part-ex-price-menu {
+  width: 50%;
 }
 
 .part-ex-newsletters-input {
@@ -1435,8 +1453,139 @@
   gap: 10px;
   margin-top: 28px;
 }
-
 /* ----- END PART EX  MODAL ----- */
+
+/* ----- BIKE SPECIFICS SECTION ----- */
+.bike-specifics-section {
+  padding-block: 50px 56px;
+}
+
+.bike-specifics-title {
+  font-style: italic;
+  font-family: var(--font-transducer-black-exp);
+  margin-bottom: 46px;
+}
+
+.bike-specifics-title span {
+  font-family: var(--font-transducer-exp);
+  font-weight: 400;
+}
+
+.bike-specifics-wrapper {
+  height: 100%;
+  max-height: 575px;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  overflow: hidden;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.bike-specifics-wrapper.active {
+  max-height: none;
+}
+
+.bike-specifics-wrapper::after {
+  content: "";
+  width: calc(100% + 40px);
+  height: 86px;
+  margin-left: -20px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(180deg, rgb(255 255 255 / 65%) 0%, rgba(255, 255, 255, 1) 100%);
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s ease-in-out;
+}
+
+.bike-specifics-wrapper.active::after {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.bike-specifics-content-caption {
+  line-height: 0.8;
+  font-family: var(--font-transducer);
+  font-weight: 400;
+  margin-bottom: 20px;
+  display: block;
+}
+
+.bike-specifics-content-caption::before,
+.bike-specifics-content-caption::after {
+  border-color: var(--black);
+}
+
+.bike-specifics-titles,
+.bike-specifics-content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+  padding-block: 26px;
+}
+
+.bike-specifics-content {
+  position: relative;
+}
+
+.bike-specifics-titles {
+  padding: 0;
+}
+
+.bike-specifics-content-title {
+  font-family: var(--font-transducer);
+}
+
+.bike-specifics-content:nth-child(even)::after {
+  content: "";
+  width: 100vw;
+  height: 100%;
+  /* margin-left: -20px; */
+  background-color: var(--white-200);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+/* .bike-specifics-wrapper {
+  display: flex;
+  align-items: start;
+}
+
+.test-01 {
+  width: 50%;
+}
+
+.test-02 {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-block: 26px;
+  position: relative;
+}
+
+.test-02:nth-child(even)::after {
+  content: "";
+  width: 100vw;
+  height: 100%;
+  margin-left: -20px;
+  background-color: var(--white-200);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+} */
+
+.bike-specifics-btn.active .read-more-btn,
+.bike-specifics-btn .less-btn {
+  display: none;
+}
+
+.bike-specifics-btn.active .less-btn {
+  display: block;
+}
 
 /* ========================================
           COMPARE HTML
@@ -1579,7 +1728,7 @@
 }
 
 .compare-btn {
-  min-width: 100%;
+  max-width: max-content;
 }
 
 .compare-get-in-touch {
