--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1272,30 +1272,20 @@
   padding: 28px 28px 60px;
 }
 
-.part-ex-wrapper.contact-active {
-  max-width: 560px;
+.part-ex-content-dialog {
+  max-width: 568px;
 }
 
-.part-ex-wrapper.bike-active {
-  max-width: 900px;
-}
-
-.part-ex-bike-value-modal {
-  /* opacity: 0;
-  visibility: hidden; */
-  display: none;
-}
-
-.part-ex-contacts-modal.active,
-.part-ex-bike-value-modal.active {
-  /* opacity: 1;
-  visibility: visible; */
-  display: block;
-}
-
-.part-ex-contacts-modal.active .part-ex-wrapper {
-  width: 100%;
+.part-ex-content-wrapper {
   max-width: 432px;
+}
+
+.part-ex-bike-value-dialog {
+  max-width: 815px;
+}
+
+.part-ex-bike-value-wrapper {
+  max-width: 586px;
 }
 
 .part-ex-head-title {
@@ -1308,7 +1298,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 20px;
+  margin-bottom: 48px;
 }
 
 .part-ex-option {
@@ -1327,16 +1319,11 @@
   border: 1px solid var(--black);
   border-radius: 100%;
   flex-shrink: 0;
+  position: relative;
   transition: all 0.3s ease-in-out;
 }
 
-.part-ex-option input[type="radio"]:checked {
-  background-color: var(--primary-100);
-  border-color: transparent;
-  position: relative;
-}
-
-.part-ex-option input[type="radio"]:checked::before {
+.part-ex-option input[type="radio"]::before {
   content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="square" stroke-linejoin="round" class="lucide lucide-check-icon lucide-check"><path d="M20 6 9 17l-5-5"/></svg>');
   width: 80%;
   height: 80%;
@@ -1345,13 +1332,24 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  visibility: hidden;
+  opacity: 0;
   transition: all 0.3s ease-in-out;
 }
 
-/* .part-ex-contacts-wrapper {
-  max-width: 432px;
-  padding-inline: 36px;
-} */
+.part-ex-option input[type="radio"]:checked {
+  background-color: var(--primary-100);
+  border-color: transparent;
+}
+
+.part-ex-option input[type="radio"]:checked::before {
+  visibility: visible;
+  opacity: 1;
+}
+
+.part-ex-option span {
+  padding-top: 5px;
+}
 
 .part-ex-contacts {
   display: flex;
@@ -1377,17 +1375,13 @@
 .part-ex-contact-caption {
   display: block;
   margin-bottom: 20px;
+  text-align: start;
 }
 
 .part-ex-form-btn {
   min-width: 100%;
   padding: 26px 14px;
 }
-
-/* .bike-value-wrapper {
-  max-width: 815px;
-  padding-inline: 88px;
-} */
 
 .bike-value-author-content {
   display: flex;
@@ -1585,6 +1579,53 @@
 
 .bike-specifics-btn.active .less-btn {
   display: block;
+}
+
+/* ----- FEATURES CARD SECTION ----- */
+.features-card-section {
+  padding-block: 56px 70px;
+}
+
+.features-card-title {
+  font-family: var(--font-transducer-black-exp);
+  font-style: italic;
+  margin-bottom: 50px;
+}
+
+.features-card-title span {
+  font-family: var(--font-transducer-exp);
+  font-weight: 400;
+}
+
+.features-cards-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: space-between;
+  gap: 48px 26px;
+}
+
+.features-card-img-content {
+  height: 418px;
+  position: relative;
+}
+
+.features-card-caption {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  min-width: 254px;
+  padding-block: 12px;
+  padding-inline: 78px 30px;
+  font-family: var(--font-transducer);
+  font-weight: 400;
+  text-align: center;
+  clip-path: polygon(22% 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+.features-card-description {
+  margin-top: 38px;
+  color: var(--gray);
+  font-weight: 200;
 }
 
 /* ========================================
