working on product video section

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -31,6 +31,7 @@
   --primary-100: #ffff00;
   --primary-100-32: #ffff0052;
   --primary-200: #ffff54;
+  --primary-200-60: rgba(255, 255, 84, 0.6);
   --white: #ffffff;
   --white-16: #ffffff29;
   --white-17: #ffffff2b;
