--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1628,6 +1628,30 @@
   font-weight: 200;
 }
 
+/* ----- PRODUCT VIDEO SECTION ----- */
+.product-video-section {
+  padding-block: 70px 82px;
+}
+
+.product-video-content {
+  width: 100%;
+  height: 602px;
+  position: relative;
+}
+
+.product-video-btn {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--primary-200-60);
+  background-color: var(--gray-200-60);
+  color: var(--primary-100);
+  padding: 20px;
+}
+
 /* ========================================
           COMPARE HTML
 ========================================*/
