--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -519,6 +519,12 @@
   }
   /* --- END MORE INFO SIDEBAR --- */
 
+  /* --- START BASKET SIDEBAR --- */
+  .mini-basket-summary {
+    font-size: 30px;
+  }
+  /* --- END BASKET SIDEBAR --- */
+
   /* ----- CONVERSION SECTION ----- */
   .conversion-section {
     margin-top: 0;
@@ -809,7 +815,6 @@
   .more-info-content {
     max-width: 100%;
   }
-
   /* --- END MORE INFO SIDEBAR --- */
 
   /* ----- CONVERSION SECTION ----- */
@@ -1038,6 +1043,25 @@
     padding-left: 26px;
   }
   /* --- END MORE INFO SIDEBAR --- */
+
+  /* --- START BASKET SIDEBAR --- */
+  .mini-basket-sidebar {
+    max-width: 100%;
+  }
+
+  .mini-basket-wrapper {
+    padding-inline: 16px;
+  }
+
+  .mini-basket-btn {
+    padding-inline: 14px;
+  }
+
+  .mini-basket-content .title {
+    text-align: center;
+    font-size: 20px;
+  }
+  /* --- END BASKET SIDEBAR --- */
 
   /* ----- CONVERSION SECTION ----- */
   .finance-modal-content {
